apply plugin: 'application'

project.version = '1.0'

project.ext.distVersion = System.getProperty("version", "SNAPSHOT");
def java25Home = javaToolchains.launcherFor {
    languageVersion = JavaLanguageVersion.of(25)
}.map { launcher -> launcher.metadata.installationPath.asFile }
def javafxRuntime = rootProject.configurations.javafxRuntime
def launch4jRuntime = rootProject.configurations.launch4jRuntime
def launch4jWorkdir = rootProject.configurations.launch4jWorkdir
def launch4jRuntimeDir = layout.buildDirectory.dir('generated/launch4j')
def launch4jPatchClassesDir = layout.buildDirectory.dir('classes/launch4j-patch')
def javafxModules = 'javafx.base,javafx.graphics,javafx.controls,javafx.fxml,javafx.media,javafx.web,javafx.swing'

repositories {
    mavenCentral()
}

sourceSets {
    main.resources.srcDirs = ['src']
}

application {
    mainClass = 'php.runtime.launcher.Launcher'
}

run {
    classpath = classpath.filter { !it.name.startsWith('javafx-') }
    jvmArgs += ["--module-path", javafxRuntime.asPath, "--add-modules", javafxModules,
                "--enable-native-access=ALL-UNNAMED,javafx.graphics,javafx.media,javafx.web", "-Dfile.encoding=UTF-8", "-Xms256m", "-Xmx1280m"]
}

jar.archiveFileName.set('DevelNext.jar')

clean {
    delete = [] //clear out existing files to delete
    delete 'build/install', 'build/libs', 'build/tmp', 'build/resources', 'build/scripts'
}

jar {
    manifest {
        attributes 'Main-Class': 'org.develnext.jphp.ext.javafx.FXLauncher'
    }
}

def buildISS = { issFile ->
    def innoSetupBin = "$project.rootDir/develnext-tools/innoSetup/ISCC.exe".replace("\\", "/")

    if (System.properties['os.name'].toLowerCase().contains('linux')) {
        providers.exec {
            commandLine 'wine', innoSetupBin, '/Qp', issFile
        }.result.get().assertNormalExitValue()
    } else {
        providers.exec {
            commandLine innoSetupBin, '/Qp', issFile
        }.result.get().assertNormalExitValue()
    }
}

def makeExe = { file ->
    if (System.properties['os.name'].toLowerCase().contains('windows')) {
        def launch4jDir = launch4jRuntimeDir.get().asFile
        def launch4jClasspath = files("$launch4jDir/launch4j-purejava-patch.jar", "$launch4jDir/launch4j.jar",
                fileTree("$launch4jDir/lib").matching { include '*.jar' }).asPath

        providers.exec {
            workingDir launch4jDir
            commandLine new File(java25Home.get(), 'bin/java.exe'), '-Djava.awt.headless=true',
                    '-cp', launch4jClasspath, 'net.sf.launch4j.Main', file
        }.result.get().assertNormalExitValue()
    } else if (System.properties['os.name'].toLowerCase().contains('linux')) {
        new File("$project.rootDir/develnext-tools/Launch4jLinux/launch4j").setExecutable(true, true);
        new File("$project.rootDir/develnext-tools/Launch4jLinux/bin/windres").setExecutable(true, true);
        new File("$project.rootDir/develnext-tools/Launch4jLinux/bin/ld").setExecutable(true, true);

        providers.exec {
            commandLine "$project.rootDir/develnext-tools/Launch4jLinux/launch4j"
            args file
        }.result.get().assertNormalExitValue()
    }
}

def compileLaunch4jPatch = tasks.register('compileLaunch4jPatch', JavaCompile) {
    source fileTree('launch4j-patch/src/main/java') { include '**/*.java' }
    classpath = launch4jRuntime
    destinationDirectory.set(launch4jPatchClassesDir)
    options.encoding = 'UTF-8'
    options.release.set(17)
}

def launch4jPatchJar = tasks.register('launch4jPatchJar', Jar) {
    dependsOn compileLaunch4jPatch
    archiveFileName.set('launch4j-purejava-patch.jar')
    destinationDirectory.set(layout.buildDirectory.dir('launch4j-patch'))
    from launch4jPatchClassesDir
}

task prepareLaunch4jRuntime(type: Sync) {
    dependsOn launch4jPatchJar
    from({ zipTree(launch4jWorkdir.singleFile) }) {
        eachFile { details ->
            def segments = details.relativePath.segments

            if (segments.length > 1 && segments[0] == 'launch4j-3.50-workdir-win32') {
                details.relativePath = new org.gradle.api.file.RelativePath(!details.directory, segments.drop(1) as String[])
            } else {
                details.exclude()
            }
        }
        includeEmptyDirs = false
    }
    from(launch4jRuntime) {
        into 'lib'
        exclude 'launch4j-*.jar'
    }
    from({ launch4jRuntime.filter { it.name.startsWith('launch4j-') } }) {
        rename { 'launch4j.jar' }
    }
    from(launch4jPatchJar.flatMap { it.archiveFile })
    into launch4jRuntimeDir
}

task prepareDist(dependsOn: ['installDist']) {
    doLast {
        copy {
            from javafxRuntime
            into "$project.buildDir/install/$project.name/lib/javafx"
        }

        fileTree("$project.buildDir/install/$project.name/lib").visit { FileVisitDetails el ->
            def name = el.getName()
            name = name.replaceAll(/(-[0-9]+|\.[0-9]+|-SNAPSHOT)/, "");

            if (name.startsWith("develnext-control-")) {
                el.file.delete();
            } else {
                if (!name.equals(el.getName())) {
                    println "Rename '" + el.file.parent + "/" + name + "' file"

                    if (name == "develnext-launcher.jar") {
                        copy {
                            from el.file
                            into "$project.buildDir/install/$project.name"
                            rename(/develnext-launcher-.*\.jar/, "DevelNext.jar")
                        }

                        el.file.delete();
                        el.file.deleteOnExit();
                    } else {
                        el.file.renameTo(file(el.file.parent + "/" + name));
                    }
                }
            }
        }
    }
}

task distWindowsPatch(type: Zip, dependsOn: ['clean', 'distPatch']) {
    from "$project.buildDir/install/$project.name"
    archiveFileName.set("DevelNext.WindowsPatch-${project.ext.distVersion}.zip")

    doLast {
        def issFile = "$project.rootDir/develnext/windowsSetup/innopatchsetup.iss".replace("\\", "/")

        if (System.properties['os.name'].toLowerCase().contains('linux')) {
            issFile = "windowsSetup/innopatchsetup.iss"
        }

        buildISS(issFile)

        file("$project.buildDir/distributions/DevelNext.WindowsPatch-${project.ext.distVersion}.exe").delete()

        file("$project.buildDir/distributions/DevelNext.WindowsPatch.exe")
                .renameTo(file("$project.buildDir/distributions/DevelNext.WindowsPatch-${project.ext.distVersion}.exe"))
    }
}

task distLinuxPatch(type: Tar, dependsOn: ['clean', 'distPatch']) {
    def installDir = "$project.buildDir/install/$project.name"

    compression = Compression.GZIP
    archiveFileName.set("DevelNext.LinuxPatch-${project.ext.distVersion}.tar.gz")

    from(installDir) {
        exclude('*.sh')
        exclude('DevelNext')
        exclude('DevelNext.jar')
        exclude('bin/develnext')
        exclude('tools/apache-ant/bin/ant')
        //exclude('tools/gradle/bin/gradle')
        exclude('tools/runtime/bin/java')
        exclude('tools/Launch4jLinux/launch4j')
        exclude('tools/Launch4jLinux/bin/windres')
        exclude('tools/Launch4jLinux/bin/ld')
    }

    from(installDir) {
        include('*.sh')
        include('DevelNext')
        include('DevelNext.jar')
        include('bin/develnext')
        include('tools/apache-ant/bin/ant')
        //include('tools/gradle/bin/gradle')
        include('tools/runtime/bin/java')
        include('tools/Launch4jLinux/launch4j')
        include('tools/Launch4jLinux/bin/windres')
        include('tools/Launch4jLinux/bin/ld')

        filePermissions { unix('rwxr-xr-x') }
    }

    doLast {
        def uploadPath = System.getProperty("uploadPath", "E:/Upload")

        if (new File(uploadPath).isDirectory()) {
            copy {
                from distLinuxPatch.archiveFile.get().asFile
                into "$uploadPath/YandexDisk"
            }
        }
    }
}


task distPatch(dependsOn: ['prepareDist']) {
    doLast {
        if (System.properties['os.name'].toLowerCase().contains('windows')) {
            providers.exec {
                commandLine "$project.rootDir/develnext-tools/Launch4j/launch4jc.exe"
                args "$project.rootDir/develnext/launcher/winLauncher.xml"
            }.result.get().assertNormalExitValue()
        }

        copy {
            from "$project.rootDir/develnext/launcher/DevelNext.exe"
            into "$project.buildDir/install/$project.name"
        }

        copy {
            from "$project.rootDir/develnext/misc"
            into "$project.buildDir/install/$project.name"
        }
    }
}



task distIdeWindows(dependsOn: ['distIde']) {
    doLast {
        delete "$project.buildDir/install/$project.name/tools/runtime"
        delete "$project.buildDir/install/$project.name/tools/jre"
        delete "$project.buildDir/install/$project.name/tools/Launch4j"
        delete "$project.buildDir/install/$project.name/tools/Launch4jLinux"

        copy {
            from java25Home
            into "$project.buildDir/install/$project.name/tools/runtime"
        }

        copy {
            from launch4jRuntimeDir
            into "$project.buildDir/install/$project.name/tools/Launch4j"
        }
    }
}

task distIdeLinux(dependsOn: ['distIde']) {
    doLast {
        delete "$project.buildDir/install/$project.name/tools/runtime"
        delete "$project.buildDir/install/$project.name/tools/jre"
        delete "$project.buildDir/install/$project.name/tools/Launch4j"
        delete "$project.buildDir/install/$project.name/tools/Launch4jLinux"

        copy {
            from "$project.rootDir/develnext-tools/jreLinux"
            into "$project.buildDir/install/$project.name/tools/runtime"
        }

        copy {
            from "$project.rootDir/develnext-tools/Launch4jLinux"
            into "$project.buildDir/install/$project.name/tools/Launch4jLinux"
        }
    }
}

task distIde(dependsOn: ['prepareDist']) {
    if (System.properties['os.name'].toLowerCase().contains('windows')) {
        dependsOn prepareLaunch4jRuntime
    }

    doLast {
        makeExe("$project.rootDir/develnext/launcher/winLauncher.xml")
        makeExe("$project.rootDir/develnext/launcher/winLauncher-debug.xml")

        copy {
            from "$project.rootDir/develnext-tools"
            into "$project.buildDir/install/$project.name/tools"
            exclude "gradle"
            exclude "jre"
            exclude "jreLinux"
            exclude "Launch4j"
            exclude "Launch4jLinux"
        }

        copy {
            from "$project.rootDir/develnext/launcher/DevelNext.exe"
            into "$project.buildDir/install/$project.name"
        }

        copy {
            from "$project.rootDir/develnext/launcher/DevelNext-debug.exe"
            into "$project.buildDir/install/$project.name"
        }

        copy {
            from "$project.rootDir/develnext/misc"
            into "$project.buildDir/install/$project.name"
        }
    }
}

task distIdeWindowsSetup(dependsOn: ['clean', 'distIdeWindows']) {
    doLast {
        def issFile = "$project.rootDir/develnext/windowsSetup/innosetup.iss".replace("\\", "/")

        if (System.properties['os.name'].toLowerCase().contains('linux')) {
            issFile = 'windowsSetup/innosetup.iss'
        }

        buildISS(issFile);


        file("$project.buildDir/distributions/DevelNextSetup-${project.ext.distVersion}.exe").delete()

        file("$project.buildDir/distributions/DevelNextSetup.exe")
                .renameTo(file("$project.buildDir/distributions/DevelNextSetup-${project.ext.distVersion}.exe"))
    }
}

task distIdeWindowsArchive(type: Zip, dependsOn: ['clean', 'distIdeWindows']) {
    def installDir = "$project.buildDir/install/$project.name"
    def timeStamp = new Date().format("dd-MM-yyyy-HH-mm")

    archiveFileName.set("DevelNextWindows-${project.ext.distVersion}.${timeStamp}.zip")
    includeEmptyDirs = true

    from installDir
}

task distIdeWindowsArchiveWithoutRuntime(type: Zip, dependsOn: ['clean', 'distIdeWindows']) {
    doFirst {
        delete "$project.buildDir/install/$project.name/tools/runtime"
        delete "$project.buildDir/install/$project.name/tools/jre"
    }

    def installDir = "$project.buildDir/install/$project.name"
    def timeStamp = new Date().format("dd-MM-yyyy-HH-mm")

    archiveFileName.set("DevelNextWindows-${project.ext.distVersion}.${timeStamp}.Without-Runtime.zip")
    includeEmptyDirs = true

    from installDir
}

task distIdeLinuxSetupWithoutRuntime(type: Zip, dependsOn: ['clean', 'distIdeLinux']) {
    doFirst {
        delete "$project.buildDir/install/$project.name/tools/runtime"
        delete "$project.buildDir/install/$project.name/tools/jre"
    }

    def installDir = "$project.buildDir/install/$project.name"
    def timeStamp = new Date().format("dd-MM-yyyy-HH-mm")

    archiveFileName.set("DevelNextLinux-${project.ext.distVersion}.${timeStamp}.Without-Runtime.zip")
    includeEmptyDirs = true

    from(installDir) {
        exclude('*.sh')
        exclude('DevelNext')
        exclude('DevelNext.jar')
        exclude('bin/develnext')
        exclude('tools/apache-ant/bin/ant')
        //exclude('tools/gradle/bin/gradle')
        exclude('tools/runtime/bin/java')
        exclude('tools/Launch4jLinux/launch4j')
        exclude('tools/Launch4jLinux/bin/windres')
        exclude('tools/Launch4jLinux/bin/ld')
    }

    from(installDir) {
        include('*.sh')
        include('DevelNext')
        include('DevelNext.jar')
        include('bin/develnext')
        include('tools/apache-ant/bin/ant')
        //include('tools/gradle/bin/gradle')
        include('tools/runtime/bin/java')
        include('tools/Launch4jLinux/launch4j')
        include('tools/Launch4jLinux/bin/windres')
        include('tools/Launch4jLinux/bin/ld')

        filePermissions { unix('rwxr-xr-x') }
    }
}

task distIdeWindowsArchiveWithoutJRE(dependsOn: distIdeWindowsArchiveWithoutRuntime) {
    description = 'Legacy alias for distIdeWindowsArchiveWithoutRuntime'
}

task distIdeLinuxSetupWithoutJRE(dependsOn: distIdeLinuxSetupWithoutRuntime) {
    description = 'Legacy alias for distIdeLinuxSetupWithoutRuntime'
}


task distIdeLinuxSetup(type: Tar, dependsOn: ['clean', 'distIdeLinux']) {
    def installDir = "$project.buildDir/install/$project.name"

    compression = Compression.GZIP
    archiveFileName.set("DevelNextLinux-${project.ext.distVersion}.tar.gz")

    from(installDir) {
        exclude('*.sh')
        exclude('DevelNext')
        exclude('DevelNext.jar')
        exclude('bin/develnext')
        exclude('tools/apache-ant/bin/ant')
        //exclude('tools/gradle/bin/gradle')
        exclude('tools/runtime/bin/java')
        exclude('tools/Launch4jLinux/launch4j')
        exclude('tools/Launch4jLinux/bin/windres')
        exclude('tools/Launch4jLinux/bin/ld')
    }

    from(installDir) {
        include('*.sh')
        include('DevelNext')
        include('DevelNext.jar')
        include('bin/develnext')
        include('tools/apache-ant/bin/ant')
        //include('tools/gradle/bin/gradle')
        include('tools/runtime/bin/java')
        include('tools/Launch4jLinux/launch4j')
        include('tools/Launch4jLinux/bin/windres')
        include('tools/Launch4jLinux/bin/ld')

        filePermissions { unix('rwxr-xr-x') }
    }
}

task distAll(dependsOn: ['distIdeWindowsSetup', 'distIdeLinuxSetup']) {

}
